; ModuleID = '/home/carl/AnghaBench/TDengine/src/os/darwin/src/extr_tdarwin.c_taosSendTcpClientData.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/os/darwin/src/extr_tdarwin.c_taosSendTcpClientData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [74 x i8] c"function taosSendTcpClientData is not implemented in darwin system, exit!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @taosSendTcpClientData(i32 %0, i16 signext %1, i8* %2, i32 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i16, align 2
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32 %0, i32* %6, align 4
  store i16 %1, i16* %7, align 2
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %11 = call i32 @tError(i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @tError(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
